Make add/remove linked list operations be atomic

--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -334,6 +334,8 @@ m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_DIRENT_H], [/* Define to 1 if you h
 @%:@undef HAVE_DIRENT_H])
 m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_GLIB_H], [/* Define to 1 if you have the <glib.h> header file. */
 @%:@undef HAVE_GLIB_H])
+m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_SEMAPHORE_H], [/* Define to 1 if you have the <semaphore.h> header file. */
+@%:@undef HAVE_SEMAPHORE_H])
 m4trace:configure.ac:23: -1- AC_SUBST([CPP])
 m4trace:configure.ac:23: -1- AC_SUBST_TRACE([CPP])
 m4trace:configure.ac:23: -1- m4_pattern_allow([^CPP$])
