--- a/autom4te.cache/output.1
+++ b/autom4te.cache/output.1
@@ -3982,7 +3982,7 @@ fi
 done
 
 
-for ac_header in errno.h sys/types.h sys/stat.h fcntl.h unistd.h utime.h dirent.h glib.h
+for ac_header in errno.h sys/types.h sys/stat.h fcntl.h unistd.h utime.h dirent.h glib.h semaphore.h
 do :
   as_ac_Header=`$as_echo "ac_cv_header_$ac_header" | $as_tr_sh`
 ac_fn_c_check_header_mongrel "$LINENO" "$ac_header" "$as_ac_Header" "$ac_includes_default"
