--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -1,4 +1,4 @@
-m4trace:configure.ac:4: -1- AC_INIT([nlinkfs], [0.1], [rene@renesp.com.br])
+m4trace:configure.ac:4: -1- AC_INIT([nlinkfs], [0.2], [rene@renesp.com.br])
 m4trace:configure.ac:4: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:4: -1- m4_pattern_forbid([_AC_])
 m4trace:configure.ac:4: -1- m4_pattern_forbid([^LIBOBJS$], [do not use LIBOBJS directly, use AC_LIBOBJ (see section `AC_LIBOBJ vs LIBOBJS'])
@@ -302,105 +302,109 @@ m4trace:configure.ac:8: -1- AC_SUBST_TRACE([am__fastdepCC_FALSE])
 m4trace:configure.ac:8: -1- m4_pattern_allow([^am__fastdepCC_FALSE$])
 m4trace:configure.ac:8: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_TRUE])
 m4trace:configure.ac:8: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_FALSE])
-m4trace:configure.ac:13: -1- AC_SUBST([GLIB_CFLAGS])
-m4trace:configure.ac:13: -1- AC_SUBST_TRACE([GLIB_CFLAGS])
-m4trace:configure.ac:13: -1- m4_pattern_allow([^GLIB_CFLAGS$])
-m4trace:configure.ac:14: -1- AC_SUBST([GLIB_LIBS])
-m4trace:configure.ac:14: -1- AC_SUBST_TRACE([GLIB_LIBS])
-m4trace:configure.ac:14: -1- m4_pattern_allow([^GLIB_LIBS$])
-m4trace:configure.ac:16: -1- AH_OUTPUT([HAVE_LIBFUSE], [/* Define to 1 if you have the `fuse\' library (-lfuse). */
+m4trace:configure.ac:11: -1- AH_OUTPUT([HAVE_LIBGLIB_2_0], [/* Define to 1 if you have the `glib-2.0\' library (-lglib-2.0). */
+@%:@undef HAVE_LIBGLIB_2_0])
+m4trace:configure.ac:11: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBGLIB_2_0])
+m4trace:configure.ac:11: -1- m4_pattern_allow([^HAVE_LIBGLIB_2_0$])
+m4trace:configure.ac:14: -1- AC_SUBST([GLIB_CFLAGS])
+m4trace:configure.ac:14: -1- AC_SUBST_TRACE([GLIB_CFLAGS])
+m4trace:configure.ac:14: -1- m4_pattern_allow([^GLIB_CFLAGS$])
+m4trace:configure.ac:15: -1- AC_SUBST([GLIB_LIBS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([GLIB_LIBS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^GLIB_LIBS$])
+m4trace:configure.ac:17: -1- AH_OUTPUT([HAVE_LIBFUSE], [/* Define to 1 if you have the `fuse\' library (-lfuse). */
 @%:@undef HAVE_LIBFUSE])
-m4trace:configure.ac:16: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBFUSE])
-m4trace:configure.ac:16: -1- m4_pattern_allow([^HAVE_LIBFUSE$])
-m4trace:configure.ac:19: -1- AC_SUBST([FUSE_CFLAGS])
-m4trace:configure.ac:19: -1- AC_SUBST_TRACE([FUSE_CFLAGS])
-m4trace:configure.ac:19: -1- m4_pattern_allow([^FUSE_CFLAGS$])
-m4trace:configure.ac:20: -1- AC_SUBST([FUSE_LIBS])
-m4trace:configure.ac:20: -1- AC_SUBST_TRACE([FUSE_LIBS])
-m4trace:configure.ac:20: -1- m4_pattern_allow([^FUSE_LIBS$])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_ERRNO_H], [/* Define to 1 if you have the <errno.h> header file. */
+m4trace:configure.ac:17: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBFUSE])
+m4trace:configure.ac:17: -1- m4_pattern_allow([^HAVE_LIBFUSE$])
+m4trace:configure.ac:20: -1- AC_SUBST([FUSE_CFLAGS])
+m4trace:configure.ac:20: -1- AC_SUBST_TRACE([FUSE_CFLAGS])
+m4trace:configure.ac:20: -1- m4_pattern_allow([^FUSE_CFLAGS$])
+m4trace:configure.ac:21: -1- AC_SUBST([FUSE_LIBS])
+m4trace:configure.ac:21: -1- AC_SUBST_TRACE([FUSE_LIBS])
+m4trace:configure.ac:21: -1- m4_pattern_allow([^FUSE_LIBS$])
+m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_ERRNO_H], [/* Define to 1 if you have the <errno.h> header file. */
 @%:@undef HAVE_ERRNO_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_SYS_TYPES_H], [/* Define to 1 if you have the <sys/types.h> header file. */
+m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_SYS_TYPES_H], [/* Define to 1 if you have the <sys/types.h> header file. */
 @%:@undef HAVE_SYS_TYPES_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_SYS_STAT_H], [/* Define to 1 if you have the <sys/stat.h> header file. */
+m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_SYS_STAT_H], [/* Define to 1 if you have the <sys/stat.h> header file. */
 @%:@undef HAVE_SYS_STAT_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_FCNTL_H], [/* Define to 1 if you have the <fcntl.h> header file. */
+m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_FCNTL_H], [/* Define to 1 if you have the <fcntl.h> header file. */
 @%:@undef HAVE_FCNTL_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_UNISTD_H], [/* Define to 1 if you have the <unistd.h> header file. */
+m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_UNISTD_H], [/* Define to 1 if you have the <unistd.h> header file. */
 @%:@undef HAVE_UNISTD_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_UTIME_H], [/* Define to 1 if you have the <utime.h> header file. */
+m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_UTIME_H], [/* Define to 1 if you have the <utime.h> header file. */
 @%:@undef HAVE_UTIME_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_DIRENT_H], [/* Define to 1 if you have the <dirent.h> header file. */
+m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_DIRENT_H], [/* Define to 1 if you have the <dirent.h> header file. */
 @%:@undef HAVE_DIRENT_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_GLIB_H], [/* Define to 1 if you have the <glib.h> header file. */
+m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_GLIB_H], [/* Define to 1 if you have the <glib.h> header file. */
 @%:@undef HAVE_GLIB_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_SEMAPHORE_H], [/* Define to 1 if you have the <semaphore.h> header file. */
+m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_SEMAPHORE_H], [/* Define to 1 if you have the <semaphore.h> header file. */
 @%:@undef HAVE_SEMAPHORE_H])
-m4trace:configure.ac:23: -1- AC_SUBST([CPP])
-m4trace:configure.ac:23: -1- AC_SUBST_TRACE([CPP])
-m4trace:configure.ac:23: -1- m4_pattern_allow([^CPP$])
-m4trace:configure.ac:23: -1- AC_SUBST([CPPFLAGS])
-m4trace:configure.ac:23: -1- AC_SUBST_TRACE([CPPFLAGS])
-m4trace:configure.ac:23: -1- m4_pattern_allow([^CPPFLAGS$])
-m4trace:configure.ac:23: -1- AC_SUBST([CPP])
-m4trace:configure.ac:23: -1- AC_SUBST_TRACE([CPP])
-m4trace:configure.ac:23: -1- m4_pattern_allow([^CPP$])
-m4trace:configure.ac:23: -1- AC_SUBST([GREP])
-m4trace:configure.ac:23: -1- AC_SUBST_TRACE([GREP])
-m4trace:configure.ac:23: -1- m4_pattern_allow([^GREP$])
-m4trace:configure.ac:23: -1- AC_SUBST([EGREP])
-m4trace:configure.ac:23: -1- AC_SUBST_TRACE([EGREP])
-m4trace:configure.ac:23: -1- m4_pattern_allow([^EGREP$])
-m4trace:configure.ac:23: -1- AC_DEFINE_TRACE_LITERAL([STDC_HEADERS])
-m4trace:configure.ac:23: -1- m4_pattern_allow([^STDC_HEADERS$])
-m4trace:configure.ac:23: -1- AH_OUTPUT([STDC_HEADERS], [/* Define to 1 if you have the ANSI C header files. */
+m4trace:configure.ac:24: -1- AC_SUBST([CPP])
+m4trace:configure.ac:24: -1- AC_SUBST_TRACE([CPP])
+m4trace:configure.ac:24: -1- m4_pattern_allow([^CPP$])
+m4trace:configure.ac:24: -1- AC_SUBST([CPPFLAGS])
+m4trace:configure.ac:24: -1- AC_SUBST_TRACE([CPPFLAGS])
+m4trace:configure.ac:24: -1- m4_pattern_allow([^CPPFLAGS$])
+m4trace:configure.ac:24: -1- AC_SUBST([CPP])
+m4trace:configure.ac:24: -1- AC_SUBST_TRACE([CPP])
+m4trace:configure.ac:24: -1- m4_pattern_allow([^CPP$])
+m4trace:configure.ac:24: -1- AC_SUBST([GREP])
+m4trace:configure.ac:24: -1- AC_SUBST_TRACE([GREP])
+m4trace:configure.ac:24: -1- m4_pattern_allow([^GREP$])
+m4trace:configure.ac:24: -1- AC_SUBST([EGREP])
+m4trace:configure.ac:24: -1- AC_SUBST_TRACE([EGREP])
+m4trace:configure.ac:24: -1- m4_pattern_allow([^EGREP$])
+m4trace:configure.ac:24: -1- AC_DEFINE_TRACE_LITERAL([STDC_HEADERS])
+m4trace:configure.ac:24: -1- m4_pattern_allow([^STDC_HEADERS$])
+m4trace:configure.ac:24: -1- AH_OUTPUT([STDC_HEADERS], [/* Define to 1 if you have the ANSI C header files. */
 @%:@undef STDC_HEADERS])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_SYS_TYPES_H], [/* Define to 1 if you have the <sys/types.h> header file. */
+m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_SYS_TYPES_H], [/* Define to 1 if you have the <sys/types.h> header file. */
 @%:@undef HAVE_SYS_TYPES_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_SYS_STAT_H], [/* Define to 1 if you have the <sys/stat.h> header file. */
+m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_SYS_STAT_H], [/* Define to 1 if you have the <sys/stat.h> header file. */
 @%:@undef HAVE_SYS_STAT_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_STDLIB_H], [/* Define to 1 if you have the <stdlib.h> header file. */
+m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_STDLIB_H], [/* Define to 1 if you have the <stdlib.h> header file. */
 @%:@undef HAVE_STDLIB_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_STRING_H], [/* Define to 1 if you have the <string.h> header file. */
+m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_STRING_H], [/* Define to 1 if you have the <string.h> header file. */
 @%:@undef HAVE_STRING_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_MEMORY_H], [/* Define to 1 if you have the <memory.h> header file. */
+m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_MEMORY_H], [/* Define to 1 if you have the <memory.h> header file. */
 @%:@undef HAVE_MEMORY_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_STRINGS_H], [/* Define to 1 if you have the <strings.h> header file. */
+m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_STRINGS_H], [/* Define to 1 if you have the <strings.h> header file. */
 @%:@undef HAVE_STRINGS_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_INTTYPES_H], [/* Define to 1 if you have the <inttypes.h> header file. */
+m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_INTTYPES_H], [/* Define to 1 if you have the <inttypes.h> header file. */
 @%:@undef HAVE_INTTYPES_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_STDINT_H], [/* Define to 1 if you have the <stdint.h> header file. */
+m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_STDINT_H], [/* Define to 1 if you have the <stdint.h> header file. */
 @%:@undef HAVE_STDINT_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_UNISTD_H], [/* Define to 1 if you have the <unistd.h> header file. */
+m4trace:configure.ac:24: -1- AH_OUTPUT([HAVE_UNISTD_H], [/* Define to 1 if you have the <unistd.h> header file. */
 @%:@undef HAVE_UNISTD_H])
-m4trace:configure.ac:29: -1- AC_CONFIG_HEADERS([src/config.h])
-m4trace:configure.ac:30: -1- AC_CONFIG_FILES([
+m4trace:configure.ac:30: -1- AC_CONFIG_HEADERS([src/config.h])
+m4trace:configure.ac:31: -1- AC_CONFIG_FILES([
 	Makefile
 	src/Makefile
 ])
-m4trace:configure.ac:35: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:35: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:35: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:35: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:35: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:35: -1- AC_SUBST([am__EXEEXT_TRUE])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
-m4trace:configure.ac:35: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:35: -1- AC_SUBST([am__EXEEXT_FALSE])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
-m4trace:configure.ac:35: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:35: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:35: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:36: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:36: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:36: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:36: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:36: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:36: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:36: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:36: -1- AC_SUBST([am__EXEEXT_TRUE])
+m4trace:configure.ac:36: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
+m4trace:configure.ac:36: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:36: -1- AC_SUBST([am__EXEEXT_FALSE])
+m4trace:configure.ac:36: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
+m4trace:configure.ac:36: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:36: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:36: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:36: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:36: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.ac:36: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:36: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:36: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:36: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:36: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:36: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:36: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:36: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:36: -1- AC_SUBST_TRACE([MKDIR_P])
